# claude-skills-tutorials

./: .gitignore  README.md  TODO.md  ops-pm-agent-prompt.md  package-lock.json  package.json  skills-vs-subagents.md
aiops-cli/: TEST_SUMMARY.md  pyproject.toml  test-report.html  test_memory_manual.py
aiops-cli/aiops/: __init__.py
aiops-cli/aiops/cpu/collectors/: process_cpu.py  system_cpu.py
aiops-cli/aiops/cpu/detectors/: __init__.py  base_detector.py  dynamic_baseline.py  static_threshold.py
aiops-cli/aiops/cpu/models/: anomaly_event.py  baseline.py  cpu_metric.py
aiops-cli/chaos/: README.md
aiops-cli/chaos/cpu/: fault_injector.py
aiops-cli/doc/: AIOps-CLI-产品介绍-marp.md  AIOps-CLI-产品介绍.md  AIOps-CLI-销售PPT-marp.md  RELEASE_NOTES_v0.9.0.md  test_data.json
aiops-cli/doc/aiops-cli/: README.md
aiops-cli/doc/aiops-cli/features/: 02-memory-anomaly-detection.md  03-disk-io-anomaly-detection.md
aiops-cli/doc/aiops-cli/features-superpod/: 11-cross-node-triage-rca.md  12-pod-resource-anomaly-detection.md  14-node-scheduling-quota-optimization.md  15-cluster-failure-propagation.md  16-multitenant-noisy-neighbor.md  17-node-health-capacity-planning.md  19-event-storm-cascade-failure.md  20-distributed-consistency-health.md
aiops-cli/feature01-reports/: feature01-accuracy-optimization-report.md
aiops-cli/src/aiops/alerting/: __init__.py  manager.py  models.py
aiops-cli/src/aiops/cli/: main.py
aiops-cli/src/aiops/config/: __init__.py  default_config.yaml  settings.py
aiops-cli/src/aiops/core/: __init__.py  base.py  constants.py  exceptions.py  utils.py
aiops-cli/src/aiops/correlation/: __init__.py  analyzer.py
aiops-cli/src/aiops/cpu/: __init__.py
aiops-cli/src/aiops_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
aiops-cli/test-plans/: test-plan-01.md  test-report-template.md
aiops-cli/tests/: README.md  conftest.py  pytest.ini
aiops-cli/tests/integration/: test_e2e.py
aiops-cli/tests/mocks/: generate_test_data.py
aiops-cli/tests/performance/: test_performance.py
aiops-cli/tests/unit/: test_cpu_collectors.py  test_detectors.py  test_diskio_detectors.py  test_diskio_models.py  test_log_detectors.py  test_log_models.py  test_memory_collectors.py  test_memory_detectors.py  test_network_models.py  test_process_detectors.py  test_process_models.py
automation/: README.md  (+11 more)
(+147 files in other folders)
